--- a/FrontEnd/css/styles.css
+++ b/FrontEnd/css/styles.css
@@ -1,15 +1,7 @@
-header
-{
-
-}
-
-
 body
 {
 	background-color: #0f3057;
 }
-
-
 
 #title{
 	color: white;	
@@ -45,7 +37,6 @@ body
 	text-align: center;
 }
 
-
 input[type=submit] {
 	background-color: #46a549;
 	color: white;
@@ -62,13 +53,12 @@ input[type=submit] {
 	font-size: 150px;
 }
 
-
 .profileMain{
 	background-color: #e7eaee;
 	padding: 20px 100px;
 	margin: 2%;
 	text-align: center;
-
+	overflow: hidden; /* Prevents elements from going outside the div */
 }
 
 .searchMain{
@@ -76,24 +66,17 @@ input[type=submit] {
 	padding: 50px;
 }
 
-#announcementField{
-	size: 100px;
+#displayAnnouncement{
+	padding: 40px;
+	background-color: blue;
 }
-
-
-#searchLink{
-	color:aquamarine;
-	text-align: center;
-	padding: 10px;
-}
-
-
 
 .searchBar{
 	text-align: center;
 	float: center;
 	padding: 15px;
-	margin: 15px;
+	margin: 5px;
+	size: 150px;
 }
 
 .profileSearch{
@@ -103,20 +86,44 @@ input[type=submit] {
 	box-shadow: 0 0 15px rgba(255, 255, 255, 0.4);
 }
 
-
-
 .personalProfile{
 	text-align: left;
-
 }
+
+.navbar {
+	padding: 5px 30px;
+	justify-content: center;
+}
+
+#mainButtons {
+	background-color: #e7eaee;
+	font-size: 15px;
+	padding: 15px 30px;
+	margin: 5px;
+	border-style: solid;
+	border-width: 2px;
+}
+
+#logout {
+	color: #8b0000;
+	float: right;
+}
+
+#postAannouncement {
+	margin: 10px;
+	padding: 5px;
+}
+
+hr {
+	background-color: #0f3057;
+	margin: 2rem;
+	}
 
 html {
 	scroll-behavior: smooth;
 }
 
 
-
-/* All Hypertext Links*/
 a {
 	text-decoration: inherit;
 	color: black;
